--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,23 +1,34 @@
+/* @import "tailwindcss/preflight"; */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  /* font-family: "Antic Didone", serif; */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  /* display: grid; */
+  /* place-items: center; */
+  /* overflow: hidden; */
 }
 
 .nav-contenedor {
-  position: fixed;
-  top: 14px;
-  left: 20rem;
-  background-color: #FCFCFB;
+  /* position: fixed; */
+  /* top: 14px;
+  left: 20rem; */
+  /* background-color: #FCFCFB; */
   font-family: "Inter Tight", sans-serif;
   font-style: normal;
-  font-weight: 100;
+  /* font-weight: 100; */
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  border-radius: 1rem;
+  justify-content: space-between; */
+  /* border-radius: 1rem; */
 }
 
 .nav-logo {
@@ -28,8 +39,8 @@
 }
 
 .nav-logo img {
-  width: 55px;
-  height:55px;
+  width: 40px;
+  height: 40px;
 }
 
 .nav-contenedor h2 {
@@ -45,10 +56,194 @@
 }
 
 .nav-pages a {
-  color: #1f1f1f;
-  font-size: 1.2rem;
+  /* color: #1f1f1f; */
+  font-size: 1rem;
   text-decoration: none;
 }
+
+.carrusel {
+  /* width: 100vh; */
+  height: 97vh;
+
+  box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+  z-index: -111;
+  overflow: hidden;
+}
+
+
+.item {
+  width: 200px;
+  height: 300px;
+  list-style-type: none;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  background-position: center;
+  background-size: cover;
+  border-radius: 20px;
+  box-shadow: 0 20px 30px rgba(255,255,255,0.3) inset;
+  transition: transform 0.1s, left 0.75s, top 0.75s, width 0.75s, height 0.75s;
+
+  &:nth-child(1), &:nth-child(2) {
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    transform: none;
+    border-radius: 0;
+    box-shadow: none;
+    opacity: 1;
+  }
+
+  &:nth-child(3) { left: 50%; }
+  &:nth-child(4) { left: calc(50% + 220px); }
+  &:nth-child(5) { left: calc(50% + 440px); }
+  &:nth-child(6) { left: calc(50% + 660px); opacity: 0; }
+}
+
+.content {
+  width: min(30vw,400px);
+  position: absolute;
+  top: 50%;
+  left: 3rem;
+  transform: translateY(-50%);
+  font: 400 0.85rem helvetica,sans-serif;
+  color: white;
+  text-shadow: 0 3px 8px rgba(0,0,0,0.5);
+  opacity: 0;
+  display: none;
+
+  & .title {
+    font-family: "Antic Didone", serif;
+    /* text-transform: uppercase; */
+    font-size: 5rem;
+  }
+
+  & .description {
+    line-height: 1.7;
+    margin: 1rem 0 1.5rem;
+    font-size: 0.8rem;
+  }
+
+  & button {
+    width: fit-content;
+    background-color: rgba(0,0,0,0.1);
+    color: white;
+    border: 2px solid white;
+    border-radius: 0.25rem;
+    padding: 0.75rem;
+    cursor: pointer;
+  }
+}
+
+/* .content h2 {
+  font-family: "Crimson Text", serif;
+} */
+
+.item:nth-of-type(2) .content {
+  display: block;
+  animation: show 0.75s ease-in-out 0.3s forwards;
+}
+
+@keyframes show {
+  0% {
+    filter: blur(5px);
+    transform: translateY(calc(-50% + 75px));
+  }
+  100% {
+    opacity: 1;
+    filter: blur(0);
+  }
+}
+
+.nav {
+  position: absolute;
+  bottom: 2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 5;
+  user-select: none;
+
+  & .btn {
+    background-color: rgba(255,255,255,0.5);
+    color: rgba(0,0,0,0.7);
+    border: 2px solid rgba(0,0,0,0.6);
+    margin: 0 0.25rem;
+    padding: 0.75rem;
+    border-radius: 50%;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba(255,255,255,0.3);
+    }
+  }
+}
+
+@media (width > 650px) and (width < 900px) {
+  .content {
+    & .title        { font-size: 1rem; }
+    & .description  { font-size: 0.7rem; }
+    & button        { font-size: 0.7rem; }
+  }
+  .item {
+    width: 160px;
+    height: 270px;
+
+    &:nth-child(3) { left: 50%; }
+    &:nth-child(4) { left: calc(50% + 170px); }
+    &:nth-child(5) { left: calc(50% + 340px); display: none;}
+    &:nth-child(6) { left: calc(50% + 510px); opacity: 0; display: none;}
+  }
+}
+
+@media (width < 650px) {
+  .content {
+    & .title        { font-size: 0.9rem; }
+    & .description  { font-size: 0.65rem; }
+    & button        { font-size: 0.7rem; }
+  }
+  .item {
+    width: 130px;
+    height: 220px;
+
+    &:nth-child(3) { left: 50%; display: none;}
+    &:nth-child(4) { left: calc(50% + 140px); display: none;}
+    &:nth-child(5) { left: calc(50% + 280px); display: none;}
+    &:nth-child(6) { left: calc(50% + 420px); opacity: 0; display: none;}
+  }
+}
+
+.text-focus-in {
+	-webkit-animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+
+@-webkit-keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+@keyframes text-focus-in {
+  0% {
+    -webkit-filter: blur(12px);
+            filter: blur(12px);
+    opacity: 0;
+  }
+  100% {
+    -webkit-filter: blur(0px);
+            filter: blur(0px);
+    opacity: 1;
+  }
+}
+
 
 
 
